--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-/* @import url('https://fonts.googleapis.com/css?family=Lobster&display=swap'); */
+/* @import url('https://fonts.googleapis.com/css?family=Lobster&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Poppins:600&display=swap');
 
 *{
@@ -222,4 +222,37 @@ a:hover{
 	.login-content{
 		justify-content: center;
 	}
-}
+} */
+.App {
+	text-align: center;
+  }
+  
+  .App-logo {
+	animation: App-logo-spin infinite 20s linear;
+	height: 40vmin;
+	pointer-events: none;
+  }
+  
+  .App-header {
+	background-color: #282c34;
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	font-size: calc(10px + 2vmin);
+	color: white;
+  }
+  
+  .App-link {
+	color: #61dafb;
+  }
+  
+  @keyframes App-logo-spin {
+	from {
+	  transform: rotate(0deg);
+	}
+	to {
+	  transform: rotate(360deg);
+	}
+  }
